# zse

./: .dockerignore  .gitignore  .modalignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  benchmark_v101.py  code_of_conduct.md  deploy.sh  docker-compose.yml  error.md  funding.json  pipeline.md  progress.md  pyproject.toml  railway.json  render.yaml  setup.py  test_capital_modal.py  test_zpf_pipeline.py  zmesh_progress.md  ztunnel_roadmap.md
benchmarks/: _breakeven.py  zpf_compression_bench.py  zpf_cost_bench.py  zpf_retrieval_eval.py  zpf_retrieval_eval_v2.py  zpf_retrieval_eval_v3.py
configs/: dev.yaml  enterprise.yaml
csrc/: README.md
csrc/attention/: .gitkeep  paged_attention.cu
csrc/kv_cache/: .gitkeep
csrc/quantize/: .gitkeep
deploy/: DEPLOY.md  convert_and_upload.py  modal_app.py  test_fused_kernels.py  test_memory_optimization.py  test_pipeline_parallel.py  test_qwen_7b.py  test_speculative.py  test_speculative_zse.py  test_tensor_parallel.py  test_tp_pp_parallel.py
docs/: MODELS.md
suggestion/: int4_matmul_optimized.py  triton_int4_optimized.py
tests/: __init__.py  bench_Qwen2.5-32B_MI300X_comparison.md  bench_zse_mi300x_v3.py  benchmark_14b_real.py  benchmark_14b_v2.py  benchmark_14b_v3.py  benchmark_14b_v4.py  benchmark_70b_local.py  benchmark_72b.py  benchmark_72b_real.py  benchmark_comprehensive_14b.py  benchmark_features_v2.py  benchmark_final_14b.py  benchmark_full_features.py  benchmark_safe_v3.py  conftest.py  test_attention.py  test_cli.py  test_convert_pipeline.py  test_generation.py  test_kv_cache.py  test_lora.py  test_modal_14b_coldstart.py  test_modal_bench_vs_vllm.py  test_modal_benchmark.py  test_modal_benchmark_14b.py  test_modal_benchmark_7b_rtx.py  test_modal_bgemv_wave32_a10g.py  test_modal_convert.py  test_modal_gemma4_convert.py  test_modal_gemma4_inventory.py  test_modal_gemma4_parity.py  test_modal_gpu.py  test_modal_graph.py  test_modal_kv_cache.py  test_modal_lora.py  test_modal_mfma_int4_parity.py  test_modal_mfma_int4_perf.py  test_modal_mfma_int4_v3.py  test_modal_orchestrator.py  (+26 more)
tests/modal/: test_32b_detached.py  test_32b_prebaked.py  test_32b_preconvert.py  test_32b_proper.py  test_32b_with_cache.py  test_70b_benchmark.py  test_70b_v5.py  test_api_server.py  test_batching.py  test_cli_user.py  test_cold_start_32b.py  test_cold_start_comparison.py  test_coldstart_fair.py  test_everything.py  test_fair_comparison.py  test_honest_coldstart.py  test_intelligent_loader.py  test_llamacpp_vs_zse.py  test_model_registry.py  test_multi_gpu.py  test_performance_features.py  test_qwen32b.py  test_qwen_7b.py  test_registry_models.py  test_zse_conversion.py  test_zse_convert_7b.py  test_zse_format.py  test_zsparse.py  test_zstream.py  trigger_70b_benchmark.py  trigger_benchmark.py  trigger_v5_benchmark.py  trigger_v5_download.py
website/: .gitignore  package-lock.json  package.json  tailwind.config.ts
website/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  images-manifest.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
website/public/: openclaw.sh
zse/: __init__.py  version.py
zse-compiler/: pyproject.toml
zse-compiler/tests/: test_compiler.py  test_gaps.py  test_metal_e2e.py  test_tier1_fixes.py  test_tier2_unpack_int4.py  test_tier2_unpack_uint4.py  test_tier3_local_array_reinterpret.py  test_tier4_mfma.py
zse-compiler/zse_compiler/: __init__.py  errors.py  kernel.py
zse-compiler/zse_compiler/ast_parser/: __init__.py  parser.py  validator.py
zse-compiler/zse_compiler/codegen/: __init__.py  base.py  cuda.py  metal.py  rocm.py
zse-compiler/zse_compiler/ir/: __init__.py  fusion.py  nodes.py  type_inference.py
zse-compiler/zse_compiler/runtime/: __init__.py  autotune.py  compiler.py  device.py  launcher.py  memory.py  metal_bridge.py  metal_dispatch.m  metal_dispatch.py  nccl.py  profiler.py
zse-compiler/zse_compiler/types/: __init__.py  dtypes.py  primitives.py  tensor.py
zse-engine/: pyproject.toml
zse-engine/zse_engine/: __init__.py  __main__.py  cli.py
zse-engine/zse_engine/cache/: __init__.py  attention_metadata.py  block_pool.py  cache_manager.py  dedup.py  evictor.py  page_table.py
zse-engine/zse_engine/format/: __init__.py  __main__.py  config.py  convert.py  fast_quant.py  header.py  loader.py  lora_format.py  quantize.py  serializer.py  spec.py  tokenizer.py  weight_index.py  writer.py
zse-engine/zse_engine/format/arch/: __init__.py  base.py  gemma2.py  gemma4.py  llama.py  phi3.py  qwen2.py
zse-engine/zse_engine/orchestrator/: __init__.py  cuda_graph.py  engine.py  fast_dispatch.py  hip_graph.py  kernels.py  lora_manager.py  lora_weights.py  model_runner.py  portable_kernels.py  sampler.py  tensor_parallel.py  tp_engine.py  tp_weight_loader.py  vram_allocator.py  weight_loader.py
zse-engine/zse_engine/rag/: __init__.py  dense_embedder.py  embeddings.py  engine.py  parser.py  pdf_crypto.py  reranker.py  store.py  zpf_format.py
zse-engine/zse_engine/server/: __init__.py  __main__.py  api_admin.py  api_lora.py  api_openai.py  api_rag.py  app.py  auth.py  database.py  router.py  sse.py
zse-engine/zse_engine/server/static/: app.js  index.html  style.css
zse-engine/zse_engine/zstreamer/: __init__.py  batch_runner.py  draft_model.py  engine.py  memory_budget.py  queue.py  request.py  scheduler.py  spec_runner.py  verifier.py
zse/api/: __init__.py
zse/core/: __init__.py
zse/efficiency/: __init__.py  quantization.py  triton_quant_kernels.py
zse/engine/: __init__.py  batching.py  generation.py  kv_cache.py  scheduler.py
zse/enterprise/: __init__.py
zse/format/: __init__.py  reader.py  reader_v2.py  spec.py  writer.py  writer_v2.py
zse/gguf/: __init__.py  backend.py  reader.py  wrapper.py
zse/kernels/: __init__.py  int4_matmul.cu  int4_matmul.py  triton_int4.py  triton_int4_v2.py  triton_int4_v3.py
zse/models/: __init__.py  cache.py  discovery.py  registry.py
zse/tee/: __init__.py  amd_gpu.py  amd_sev.py  base.py  (+2 more)
(+392 files in other folders)
