[build-system]
requires = ["setuptools>=68.0", "wheel", "torch>=2.1.0", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "zllm-zse"
version = "0.1.3"
description = "ZSE - Z Server Engine: Ultra memory-efficient LLM inference engine"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "ZSE Team"}
]
keywords = [
    "llm",
    "inference",
    "cuda",
    "transformer",
    "deep-learning",
    "machine-learning",
    "gpu",
    "memory-efficient",
    "quantization"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: GPU :: NVIDIA CUDA",
]

dependencies = [
    # Core ML
    "torch>=2.1.0",
    "safetensors>=0.4.0",
    "transformers>=4.36.0",
    "tokenizers>=0.15.0",
    "accelerate>=0.25.0",
    
    # API Server
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "sse-starlette>=1.8.0",
    
    # CLI
    "typer>=0.9.0",
    "rich>=13.7.0",
    
    # System
    "psutil>=5.9.0",
    "numpy>=1.26.0",
    
    # Config
    "pyyaml>=6.0.0",
    "toml>=0.10.0",
    
    # Async
    "anyio>=4.2.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "pre-commit>=3.6.0",
]

cuda = [
    "triton>=2.1.0",
    "pynvml>=11.5.0",
    "bitsandbytes>=0.41.0",
]

enterprise = [
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "prometheus-client>=0.19.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
]

gguf = [
    "llama-cpp-python>=0.2.0",
]

all = [
    "zse[dev,cuda,enterprise,gguf]",
]

[project.scripts]
zse = "zse.api.cli.main:app"

[project.urls]
Homepage = "https://github.com/Zyora-Dev/zse"
Documentation = "https://github.com/Zyora-Dev/zse#readme"
Repository = "https://github.com/Zyora-Dev/zse"
Issues = "https://github.com/Zyora-Dev/zse/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["zse*"]

[tool.setuptools.package-data]
zse = ["py.typed", "*.yaml", "*.json"]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-v",
    "--strict-markers",
    "-ra",
    "--tb=short",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "cuda: marks tests requiring CUDA GPU",
    "integration: marks integration tests",
]

# Ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["zse"]

# Black configuration
[tool.black]
line-length = 100
target-version = ["py311"]

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "triton.*",
    "transformers.*",
    "safetensors.*",
    "pynvml.*",
    "bitsandbytes.*",
]
ignore_missing_imports = true
