[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zse-compiler"
version = "0.1.0"
description = "Pure Python GPU Kernel Compiler — CUDA, ROCm, Metal. Zero dependencies."
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = []  # ZERO dependencies — this is the whole point

[project.optional-dependencies]
dev = ["pytest>=7.0"]
