[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zse-engine"
version = "0.1.0"
description = "ZSE Production LLM Inference Server — fastest cold start, minimal VRAM."
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = ["zse-compiler==0.1.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
zse-convert = "zse_engine.format.__main__:main"
